# eternal

./: LICENSE  README.md  requirements.txt  setup.cfg
eternal/: 7win.py  card.py  deck.py  ewc.py  format.py  plot.py
eternal/boosting_data/: 11.1.json  11.2.json  11.3.json  12.1.json  12.2.json
src/eternal/: 7win.py  card.py  deck.py  ewc.py
tests/: test_card.py  test_ewc.py  test_format.py
