[metadata]
name = eternal-card-game
version = 0.0.1
author = Jay Turcot
author_email = jayturcot@hotmail.com
description = Python packages used for analysis of Eternal Card Game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pjturcot/
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
